# FFMpegOneDemo

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/xj/ffmpegonedemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: FFDecode.cpp  FFDecode.h  FFDemux.cpp  FFDemux.h  FFPlayBuilder.cpp  FFPlayBuilder.h  FFResample.cpp  FFResample.h  GLVideoView.cpp  GLVideoView.h  IAudioPlay.cpp  IAudioPlay.h  IDecode.cpp  IDecode.h  IDemux.cpp  IDemux.h  IPlayBuilder.cpp  IPlayBuilder.h  IPlayPorxy.cpp  IPlayPorxy.h  IPlayer.cpp  IPlayer.h  IResample.cpp  IResample.h  IVideoView.cpp  IVideoView.h  Iobserver.cpp  Iobserver.h  SLAudioPlay.cpp  SLAudioPlay.h  XData.cpp  XData.h  XEGL.cpp  XEGL.h  XLog.cpp  XLog.h  XParameter.cpp  XParameter.h  XShader.cpp  XShader.h  (+5 more)
app/src/main/java/com/xj/ffmpegonedemo/: MainActivity.java  OpenGlTestActivity.java  OpenUrl.java  TestPlay.java  XPlay.java
app/src/main/java/com/xj/ffmpegonedemo/TestOpenGl/: MyGLRenderer.java  MyGLSurfaceView.java  Square.java  Triangle.java
app/src/main/res/layout/: activity_main.xml  activity_open_gl_test.xml  openurl.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/xj/ffmpegonedemo/: ExampleUnitTest.java
testhuadong/: build.gradle
testhuadong/src/androidTest/java/com/xj/testhuadong/: ExampleInstrumentedTest.java
testhuadong/src/main/: AndroidManifest.xml
testhuadong/src/main/java/com/xj/testhuadong/: MainActivity.java  TestView.java
testhuadong/src/main/res/layout/: activity_main.xml
testhuadong/src/main/res/values/: strings.xml
testhuadong/src/test/java/com/xj/testhuadong/: ExampleUnitTest.java
